# libsip

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: calls.md  codecs.md  cookbook.md  feature_roadmap.md  mcp.md  rfc_status.md  roadmap.md  rtp.md  sdp.md  sessions.md  sip.md
sip/: __init__.py  __main__.py  aio.py  calls.py  lexers.py  messages.py  protocol.py  stun.py  whisper.py
tests/: conftest.py  test__main.py  test_ai.py  test_ai.py.bak  test_aio.py  test_audio.py  test_call.py  test_calls.py  test_integration.py  test_lexers.py  test_main.py  test_mcp.py  test_messages.py  test_protocol.py  test_rtp.py  test_stun.py  test_types.py  test_whisper.py
tests/codecs/: test_av.py  test_base.py  test_codecs.py  test_g722.py  test_opus.py  test_pcm.py
tests/sdp/: __init__.py  test_lexers.py  test_messages.py
tests/sip/: conftest.py  test_aio.py  test_lexers.py  test_messages.py  test_protocol.py  test_transactions.py  test_types.py
voip/: __init__.py  __main__.py  ai.py  ai.py.bak  audio.py  call.py  mcp.py  rtp.py  srtp.py  stun.py  types.py  whisper.py
voip/codecs/: __init__.py  av.py  base.py  g722.py  opus.py  pcma.py  pcmu.py
voip/sdp/: __init__.py  lexers.py  messages.py  types.py
voip/sip/: __init__.py  dialog.py  exceptions.py  lexers.py  messages.py  protocol.py  transactions.py  types.py
