[build-system]
requires = ["flit_core>=3.2", "flit_scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "VoIP"
authors = [
  { name = "Johannes Maron", email = "johannes@maron.family" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["VoIP", "SIP", "RTP", "WebRTC", "STUN", "asyncio"]
dynamic = ["version", "description"]
classifiers = [
  # https://pypi.org/classifiers/
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: AsyncIO",
  "Topic :: Communications :: Internet Phone",
  "Topic :: Communications :: Telephony",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Networking",
  "Topic :: Home Automation",
]
requires-python = ">=3.10"

[project.optional-dependencies]
cli = ["click", "pygments", "openai-whisper", "numpy"]
pygments = ["Pygments"]
# whisper also requires the system ffmpeg binary (not a Python package).
# Install via: apt install ffmpeg / brew install ffmpeg.
whisper = ["openai-whisper", "numpy", "ffmpeg-python"]

[project.scripts]
voip = "voip.__main__:main"

[project.entry-points."pygments.lexers"]
sip = "voip.sip.lexers:SIPLexer"

[dependency-groups]
dev = [
  { include-group = "test" },
]
test = [
  "pytest",
  "pytest-cov",
]

[project.urls]
Project-URL = "https://github.com/codingjoe/VoIP"
Changelog = "https://github.com/codingjoe/VoIP/releases"

[tool.setuptools_scm]
write_to = "voip/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --tb=short -rxs -m 'not integration'"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring network access (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["voip"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
src = ["voip", "tests"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit
    "D", # pydocstyle
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
]

ignore = ["B904", "D1", "E501", "S101"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"
