[build-system]
requires = ["flit_core>=3.2", "flit_scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "VoIP"
authors = [
  { name = "Johannes Maron", email = "johannes@maron.family" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["VoIP", "SIP", "RTP", "WebRTC", "STUN", "asyncio"]
dynamic = ["version", "description"]
classifiers = [
  # https://pypi.org/classifiers/
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Framework :: AsyncIO",
  "Topic :: Communications :: Internet Phone",
  "Topic :: Communications :: Telephony",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Networking",
  "Topic :: Home Automation",
]
requires-python = ">=3.14"
dependencies = ["cryptography"]

[project.optional-dependencies]
audio = ["numpy"]
hd-audio = ["numpy", "av"]
ai = ["faster-whisper", "numpy", "av", "ollama", "pocket-tts"]
cli = ["click", "pygments", "faster-whisper", "numpy", "ollama", "pocket-tts"]
pygments = ["Pygments"]

[project.scripts]
voip = "voip.__main__:main"

[project.entry-points."pygments.lexers"]
sip = "voip.sip.lexers:SIPLexer"
sdp = "voip.sdp.lexers:SDPLexer"

[tool.flit.module]
name = "voip"

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "docs" },
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio>=1.3.0",
]
docs = [
  "mkdocs",
  "mkdocstrings[python]>=0.18",
  "mkdocs-material",
  "markdown-callouts",
  "Pygments",
]

[project.urls]
# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
Homepage = "https://github.com/codingjoe/VoIP"
Changelog = "https://github.com/codingjoe/VoIP/releases"
Source = "https://github.com/codingjoe/VoIP"
Releasenotes = "https://github.com/codingjoe/VoIP/releases/latest"
Documentation = "https://codingjoe.dev/VoIP/"
Issues = "https://github.com/codingjoe/VoIP/issues"
Funding = "https://github.com/sponsors/codingjoe"

[tool.setuptools_scm]
write_to = "voip/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --strict-markers --cov-report=xml --cov-report=term"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring network access (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["voip"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
src = ["voip", "tests"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit
    "D", # pydocstyle
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
]

ignore = ["B904", "D1", "E501", "S101"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"
